# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  index.js  package.json  webpack.config.js
src/: lib.rs
