[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Stephen Martindale"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.33"

[dependencies.web-sys]
version = "0.3.10"
features = [
  'CanvasRenderingContext2d'
]

[profile.release]
lto = true
opt-level = 's'
