[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Stephen Martindale"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [ "CanvasRenderingContext2d" ] }

[profile.release]
lto = true
opt-level = 's'
